grammars/tree-sitter-javaswing/grammar.js
    program: $ => repeat($._toplevel_statement),

    _toplevel_statement: $ => choice(
      $.statement,
      $.javaswing_event_handler,
      $.javaswing_init_components,
      $.method_declaration,
    ),

    // Literals

    decimal_integer_literal: _ => token(seq(
      DIGITS,
      optional(choice('l', 'L')),
    )),

    true: _ => 'true',

    false: _ => 'false',

    string_literal: $ => choice($._string_literal, $._multiline_string_literal),
    _string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_fragment,
        $.escape_sequence,
        $.string_interpolation,
      )),
      '"',
    ),
    _multiline_string_literal: $ => seq(
      '"""',
      repeat(choice(
        alias($._multiline_string_fragment, $.multiline_string_fragment),
        $._escape_sequence,
        $.string_interpolation,
      )),
      '"""',
    ),
    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.

    string_fragment: _ => token.immediate(prec(1, /[^"\\]+/)),
    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', choice(
        $.identifier,
        $._reserved_identifier,
        $.field_access,
        $.array_access,
      )),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '&=', '|=', '^=', '%=', '<<=', '>>=', '>>>=')),
      field('right', $.expression),
    )),

    array_creation_expression: $ => prec.right(seq(
      'new',
      repeat($._annotation),
      field('type', choice($._simple_type, $.javaswing_component_creation_type)),
      choice(
        seq(
          field('dimensions', repeat1($.dimensions_expr)),
          field('dimensions', optional($.dimensions)),
        ),
        seq(
          field('dimensions', $.dimensions),
          field('value', $.array_initializer),
        ),
      ),
    )),

    dimensions_expr: $ => seq(repeat($._annotation), '[', $.expression, ']'),

    class_literal: $ => prec.dynamic(PREC.CLASS_LITERAL, seq($._unannotated_type, '.', 'class')),

    object_creation_expression: $ => choice(
      $.javaswing_dialog_creation,
      $.javaswing_button_group_creation,
      $.javaswing_combo_box_creation,
      $.javaswing_item_model_creation,
      $.javaswing_cell_renderer_editor_creation,
      $.javaswing_toolbar_creation,
      $.javaswing_progress_bar_creation,
      $.javaswing_separator_creation,
      $.javaswing_list_creation,
      $.javaswing_scroll_bar_creation,
      $.javaswing_text_editor_creation,
      $.javaswing_password_field_creation,
      $.javaswing_formatted_text_field_creation,
      $.javaswing_text_input_creation,
      $.javaswing_selectable_button_creation,
      $.javaswing_spinner_creation,
      $.javaswing_spinner_model_creation,
      $.javaswing_grid_bag_constraints_creation,
      $.javaswing_insets_creation,
      $.javaswing_dimension_creation,
      $.javaswing_action_structure,
      $.javaswing_timer_structure,
      $.javaswing_swing_worker_creation,
      $.javaswing_document_creation,
      $.javaswing_transfer_handler_creation,
      $.javaswing_component_creation,
      $.javaswing_border_creation,
      $._unqualified_object_creation_expression,
      seq($.primary_expression, '.', $._unqualified_object_creation_expression),
    ),

    javaswing_component_creation: $ => prec.right(seq(
      'new',
      choice(
        seq(
          repeat($._annotation),
          field('type_arguments', $.type_arguments),
          repeat($._annotation),
        ),
        repeat($._annotation),
      ),
      field('type', $.javaswing_component_creation_type),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    javaswing_component_creation_type: $ => choice(
      $.javaswing_component_type,
      $.javaswing_component_generic_type,
    ),

    _unqualified_object_creation_expression: $ => prec.right(seq(
      'new',
      choice(
        seq(
          repeat($._annotation),
          field('type_arguments', $.type_arguments),
          repeat($._annotation),
        ),
        repeat($._annotation),
      ),
      field('type', $._simple_type),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    method_invocation: $ => choice(
      $.javaswing_action_command,
      $.javaswing_menu_structure,
      $.javaswing_event_listener,
      $.javaswing_init_components_call,
      $.javaswing_cell_renderer_editor_interaction,
      $.javaswing_progress_bar_interaction,
      $.javaswing_list_selection_interaction,
      $.javaswing_scroll_bar_increment_interaction,
      $.javaswing_scroll_bar_access,
      $.javaswing_text_editor_interaction,
      $.javaswing_formatted_text_field_interaction,
      $.javaswing_text_input_interaction,
      $.javaswing_selectable_button_interaction,
      $.javaswing_combo_box_interaction,
      $.javaswing_table_column_model,
      $.javaswing_scroll_viewport,
      $.javaswing_border_assignment,
      $.javaswing_dialog_interaction,
      $.javaswing_file_chooser_interaction,
      $.javaswing_tabbed_pane_interaction,
      $.javaswing_popup_menu_interaction,
      $.javaswing_split_pane_interaction,
      $.javaswing_item_model_interaction,
      $.javaswing_selection_model_access,
      $._javaswing_generic_show_invocation,
      $.javaswing_table_model_mutation,
      $.javaswing_selection_model,
      $.javaswing_box_factory,
      $.javaswing_bounds_geometry,
      $.javaswing_window_lifecycle,
      $.javaswing_root_pane_structure,
      $.javaswing_keyboard_bindings,
      $.javaswing_action_metadata,
      $.javaswing_document_model,
      $.javaswing_root_pane_extended,
      $.javaswing_threading_invocation,
      $.javaswing_focus_interaction,
      $.javaswing_transfer_handler_interaction,
      $.javaswing_property_setter,
      $.javaswing_layout_assignment,
      $.javaswing_container_add,
      seq(
        choice(
          field('name', $._method_name),
          seq(
            field('object', choice($.primary_expression, $.super)),
            '.',
            optional(seq(
              $.super,
              '.',
            )),
            field('type_arguments', optional($.type_arguments)),
            field('name', $._method_name),
          ),
        ),
        field('arguments', $.argument_list),
      ),
    ),

    javaswing_tabbed_pane_class: _ => choice(
      'JTabbedPane',
      token(seq('javax', '.', 'swing', '.', 'JTabbedPane')),
    ),

    javaswing_combo_box_interaction: $ => prec(PREC.OBJ_ACCESS + 2, seq(
      field('combo_box', choice($.primary_expression, $.super)),
      '.',
      field('name', choice(
        $._javaswing_combo_box_selection_method,
        $._javaswing_combo_box_popup_method,
        $._javaswing_combo_box_renderer_editor_method,
        $._javaswing_combo_box_display_method,
      )),
      field('arguments', $.argument_list),
    )),

    javaswing_combo_box_creation: $ => prec.right(PREC.OBJ_INST + 1, seq(
      'new',
      choice(
        seq(
          repeat($._annotation),
          field('type_arguments', $.type_arguments),
          repeat($._annotation),
        ),
        repeat($._annotation),
      ),
      field('type', $.javaswing_combo_box_creation_type),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    javaswing_combo_box_creation_type: $ => choice(
      $.javaswing_combo_box_class,
      $.javaswing_combo_box_generic_type,
    ),

    javaswing_combo_box_reference_type: $ => choice(
      $.javaswing_combo_box_class,
      $.javaswing_combo_box_generic_type,
      $.javaswing_combo_box_array_type,
    ),

    javaswing_combo_box_generic_type: $ => prec.dynamic(PREC.GENERIC + 1, seq(
      field('type', $.javaswing_combo_box_class),
      $.type_arguments,
    )),

    javaswing_combo_box_array_type: $ => seq(
      field('element', choice(
        $.javaswing_combo_box_class,
        $.javaswing_combo_box_generic_type,
      )),
      field('dimensions', $.dimensions),
    ),

    javaswing_combo_box_class: _ => choice(
      ...JAVASWING_COMBO_BOX_TYPES.map(type => type),
      token(seq('javax', '.', 'swing', '.', 'JComboBox')),
    ),

    javaswing_cell_renderer_editor_interaction: $ => prec(PREC.OBJ_ACCESS + 3, seq(
      field('renderer_editor', choice($.primary_expression, $.super)),
      '.',
      field('name', $._javaswing_cell_renderer_editor_method),
      field('arguments', $.argument_list),
    )),

    javaswing_cell_renderer_editor_creation: $ => prec.right(PREC.OBJ_INST + 1, seq(
      'new',
      repeat($._annotation),
      field('type', $.javaswing_cell_renderer_editor_class),
      field('arguments', $.argument_list),
      optional($.class_body),
    )),

    javaswing_cell_renderer_editor_class: _ => choice(
      ...JAVASWING_CELL_RENDERER_EDITOR_SWING_TYPES.map(type => type),
      ...JAVASWING_CELL_RENDERER_EDITOR_TABLE_TYPES.map(type => type),
      token(seq(
        'javax',
        '.',
        'swing',
        '.',
        choice(...JAVASWING_CELL_RENDERER_EDITOR_SWING_TYPES),
      )),
      token(seq(
        'javax',
        '.',
        'swing',
        '.',
        'table',
        '.',
        choice(...JAVASWING_CELL_RENDERER_EDITOR_TABLE_TYPES),
      )),
    ),

    javaswing_list_class: _ => choice(
      ...JAVASWING_LIST_TYPES.map(type => type),
      token(seq('javax', '.', 'swing', '.', 'JList')),
    ),

    javaswing_text_input_class: _ => choice(
      ...JAVASWING_TEXT_INPUT_TYPES.map(type => type),
      token(seq('javax', '.', 'swing', '.', choice(...JAVASWING_TEXT_INPUT_TYPES))),
    ),

    _javaswing_generic_show_invocation: $ => prec(PREC.OBJ_ACCESS + 1, seq(
      field('object', choice($.primary_expression, $.super)),
      '.',
      field('name', $._javaswing_popup_menu_display_method),
      field('arguments', $.argument_list),
    )),

    javaswing_property_setter: $ => prec(PREC.OBJ_ACCESS + 1, choice(
      seq(
        field('name', $._javaswing_property_setter_method),
        field('arguments', $.argument_list),
      ),
      seq(
        field('component', choice($.primary_expression, $.super)),
        '.',
        field('name', $._javaswing_property_setter_method),
        field('arguments', $.argument_list),
      ),
    )),

    javaswing_container_add: $ => choice(
      seq(
        field('container', $.javaswing_content_pane_access),
        '.',
        field('name', $._javaswing_container_add_method),
        field('arguments', $.javaswing_container_add_arguments),
      ),
      seq(
        field('container', choice($.primary_expression, $.super)),
        '.',
        field('name', $._javaswing_container_add_method),
        field('arguments', $.javaswing_container_add_component_creation_arguments),
      ),
      seq(
        field('container', choice($.primary_expression, $.super)),
        '.',
        field('name', $._javaswing_container_add_method),
        field('arguments', $.javaswing_container_add_border_layout_arguments),
      ),
    ),

    javaswing_container_add_component_creation_arguments: $ => prec(PREC.OBJ_INST + 1, seq(
      '(',
      field('component', $.javaswing_component_creation),
      optional(seq(
        ',',
        field('constraints', $.expression),
        optional(seq(
          ',',
          field('index', $.expression),
        )),
      )),
      ')',
    )),

    _javaswing_container_add_method: _ => 'add',

    _javaswing_property_setter_method: _ => choice(
      ...JAVASWING_PROPERTY_SETTER_METHODS.map(method => method),
    ),

    _javaswing_combo_box_selection_method: _ => choice(
      ...JAVASWING_COMBO_BOX_SELECTION_METHODS.map(method => method),
    ),

    _javaswing_combo_box_popup_method: _ => choice(
      ...JAVASWING_COMBO_BOX_POPUP_METHODS.map(method => method),
    ),

    _javaswing_combo_box_renderer_editor_method: _ => choice(
      ...JAVASWING_COMBO_BOX_RENDERER_EDITOR_METHODS.map(method => method),
    ),

    _javaswing_combo_box_display_method: _ => choice(
      ...JAVASWING_COMBO_BOX_DISPLAY_METHODS.map(method => method),
    ),

    _javaswing_cell_renderer_editor_method: _ => choice(
      ...JAVASWING_CELL_RENDERER_EDITOR_METHODS.map(method => prec(2, method)),
    ),

    _method_name: $ => choice(
      $.identifier,
      $._reserved_identifier,
      $._javaswing_container_add_method,
      $._javaswing_get_content_pane_method,
      $._javaswing_set_layout_method,
      $._javaswing_property_setter_method,
      $._javaswing_table_model_mutation_method,
      $._javaswing_event_listener_method,
      $._javaswing_action_command_setter_method,
      $._javaswing_action_command_getter_method,
      $._javaswing_set_border_method,
      $._javaswing_set_viewport_border_method,
      $._javaswing_border_factory_method,
      $._javaswing_box_factory_method,
      $._javaswing_bounds_geometry_method,
      $._javaswing_window_lifecycle_method,
      $._javaswing_root_pane_structure_method,
      $._javaswing_option_pane_dialog_method,
      $._javaswing_option_pane_context_method,
      $._javaswing_dialog_modality_method,
      $._javaswing_file_chooser_dialog_method,
      $._javaswing_file_chooser_selection_method,
      $._javaswing_file_chooser_configuration_method,
      $._javaswing_tabbed_pane_tab_method,
      $._javaswing_tabbed_pane_selection_method,
      $._javaswing_tabbed_pane_lookup_method,
      $._javaswing_tabbed_pane_appearance_method,
      $._javaswing_tabbed_pane_layout_method,
      $._javaswing_split_pane_component_method,
      $._javaswing_split_pane_divider_method,
      $._javaswing_split_pane_orientation_method,
      $._javaswing_scroll_bar_access_method,
      $._javaswing_scroll_bar_increment_method,
      $._javaswing_text_editor_method,
      $._javaswing_combo_box_selection_method,
      $._javaswing_combo_box_popup_method,
      $._javaswing_combo_box_renderer_editor_method,
      $._javaswing_combo_box_display_method,
      $._javaswing_combo_box_item_method,
      $._javaswing_item_model_method,
      $._javaswing_cell_renderer_editor_method,
    ),
    

    argument_list: $ => seq('(', commaSep($.expression), ')'),

    type_arguments: $ => seq(
      '<',
      commaSep(choice($._type, $.wildcard)),
      '>',
    ),

    dimensions: $ => prec.right(repeat1(
      seq(repeat($._annotation), '[', ']'),
    )),

    block: $ => seq(
      '{', repeat($.statement), '}',
    ),

    expression_statement: $ => seq(
      $.expression,
      ';',
    ),

    return_statement: $ => seq(
      'return',
      optional($.expression),
      ';',
    ),

    _annotation: $ => choice(
      $.marker_annotation,
      $.annotation,
    ),

    import_declaration: $ => seq(
      'import',
      optional('static'),
      $._name,
      optional(seq('.', $.asterisk)),
      ';',
    ),

    class_declaration: $ => seq(
      optional($.modifiers),
      'class',
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('superclass', $.superclass)),
      optional(field('interfaces', $.super_interfaces)),
      optional(field('permits', $.permits)),
      field('body', $.class_body),
    ),

    modifiers: $ => repeat1(choice(
      $._annotation,
      'public',
      'protected',
      'private',
      'abstract',
      'static',
      'final',
      'strictfp',
      'default',
      'synchronized',
      'native',
      'transient',
      'volatile',
      'sealed',
      'non-sealed',
    )),

    super_interfaces: $ => seq(
      'implements',
      $.type_list,
    ),

    type_list: $ => seq(
      $._type,
      repeat(seq(',', $._type)),
    ),

    class_body: $ => seq(
      '{',
      repeat($._class_body_declaration),
      '}',
    ),

    _name: $ => choice(
      $.identifier,
      $._reserved_identifier,
      $.scoped_identifier,
    ),
